--- a/server/export/pwa/index.html
+++ b/server/export/pwa/index.html
@@ -37,18 +37,21 @@
 	<style>
 		[SITEFONTS]
 		html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; }
+        #TilBuciArea { margin: 0; padding: 0; height: 100%; width: 100%; overflow: hidden; background: #000000; }
 		#openfl-content { background: #000000; width: 100%; height: 100%; }
         #embed_area { position: absolute; left: 0; top: 0; display: none; background-color: #000000; padding: 0; width: 100%; height: 100%; box-sizing: content-box; }
         #embed_frame { display: none; }
 	</style>
 </head>
 <body>
-	<noscript>This webpage makes extensive use of JavaScript. Please enable JavaScript in your web browser to view this page.</noscript>
-	<div id="openfl-content"></div>
-	<script type="text/javascript">
-		lime.embed ("Website", "openfl-content", 0, 0, { parameters: { "movie": "[SITEMOVIE]", "scene": "[SITESCENE]", "ws": "[SITEWS]" } });
-	</script>
-	[SITEPLUGINEND]
-    <div id="embed_area"><iframe id="embed_frame" width="0" height="0" src=""></iframe></div>
+    <div id="TilBuciArea">
+        <noscript>This webpage makes extensive use of JavaScript. Please enable JavaScript in your web browser to view this page.</noscript>
+        <div id="openfl-content"></div>
+        <script type="text/javascript">
+            lime.embed ("Website", "openfl-content", 0, 0, { parameters: { "movie": "[SITEMOVIE]", "scene": "[SITESCENE]", "ws": "[SITEWS]" } });
+        </script>
+        [SITEPLUGINEND]
+        <div id="embed_area"><iframe id="embed_frame" width="0" height="0" src=""></iframe></div>
+    </div>
 </body>
 </html>
