--- a/server/export/cordova/index.html
+++ b/server/export/cordova/index.html
@@ -26,7 +26,7 @@
 	</script>
 	<style>
 		[SITEFONTS]
-		html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; }
+		html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; background-color: #666666; }
         #TilBuciArea { margin: 0; padding: 0; height: 100%; width: 100%; overflow: hidden; background: #000000; }
 		#openfl-content { background: #000000; width: 100%; height: 100%; }
         #embed_area { position: absolute; left: 0; top: 0; display: none; padding: 0; width: 100%; height: 100%; box-sizing: content-box; margin: 0; border: none; overflow: hidden; background-color: transparent; }
