--- a/server/public_html/app/assets/license.html
+++ b/server/public_html/app/assets/license.html
@@ -58,6 +58,26 @@
         <p>&nbsp;</p>
     </font>
     <font size="18">
+        <p><b>NW.JS</b></p>
+    </font>
+    <font size="14">
+        <p>&nbsp;</p>
+        <p>NW.js (previously known as node-webkit) lets you call all Node.js modules directly from DOM and enables a new way of writing applications with all Web technologies. Used for desktop application deployment.</p>
+        <p>&nbsp;</p>
+        <p><a href="https://nwjs.io/" target="_blank">nwjs.io</a></p>
+        <p>&nbsp;</p>
+    </font>
+    <font size="18">
+        <p><b>APACHE CORDOVA</b></p>
+    </font>
+    <font size="14">
+        <p>&nbsp;</p>
+        <p>Mobile apps with HTML, CSS & JS. Target multiple platforms with one code base. Free and open source. Used for mobile application deployment.</p>
+        <p>&nbsp;</p>
+        <p><a href="https://cordova.apache.org/" target="_blank">cordova.apache.org</a></p>
+        <p>&nbsp;</p>
+    </font>
+    <font size="18">
         <p><b>FONTS</b></p>
     </font>
     <font size="14">
