--- a/server/public_html/app/assets/license.html
+++ b/server/public_html/app/assets/license.html
@@ -58,13 +58,13 @@
         <p>&nbsp;</p>
     </font>
     <font size="18">
-        <p><b>NW.JS</b></p>
+        <p><b>ELECTRON JS</b></p>
     </font>
     <font size="14">
         <p>&nbsp;</p>
-        <p>NW.js (previously known as node-webkit) lets you call all Node.js modules directly from DOM and enables a new way of writing applications with all Web technologies. Used for desktop application deployment.</p>
+        <p>Build cross-platform desktop apps with JavaScript, HTML, and CSS. Used for desktop application deployment.</p>
         <p>&nbsp;</p>
-        <p><a href="https://nwjs.io/" target="_blank">nwjs.io</a></p>
+        <p><a href="https://www.electronjs.org/" target="_blank">www.electronjs.org</a></p>
         <p>&nbsp;</p>
     </font>
     <font size="18">
