--- a/server/export/desktop/index.html
+++ b/server/export/desktop/index.html
@@ -40,7 +40,7 @@
         <noscript>This webpage makes extensive use of JavaScript. Please enable JavaScript in your web browser to view this page.</noscript>
         <div id="openfl-content"></div>
         <script type="text/javascript">
-            lime.embed ("Website", "openfl-content", 0, 0, { parameters: { "movie": "[SITEMOVIE]", "scene": "[SITESCENE]", "ws": "[SITEWS]" } });
+            lime.embed ("Website", "openfl-content", 0, 0, { parameters: { "movie": "[SITEMOVIE]", "scene": "[SITESCENE]", "ws": "[SITEWS]" [PARAMEXTRA] } });
         </script>
         [SITEPLUGINEND]
         <div id="embed_area"><iframe id="embed_frame" width="0" height="0" src="" frameborder="0"></iframe></div>
