--- a/server/export/desktop/readme.html
+++ b/server/export/desktop/readme.html
@@ -29,6 +29,7 @@
 <body>
     <h1>TilBuci desktop app project</h1>
     <p>This is your <a href="https://www.electronjs.org/" target="_blank">Electron</a> project. It can be used to create Windows, Linux and macOS apps for both x64 and ARM platforms on all systems - just follow the procedure below in the system where you want to create your app for. If you have already generated apps from your movie using Elactron, just copy the new files, overriding the previous ones. Avoid saving your Electron project on a folder with spaces of special characters on path/name.</p>
+    <p>You can check out a video tutorial with this procedure at <a href="https://www.youtube.com/watch?v=NFs9FwbQTac" target="_blank">https://www.youtube.com/watch?v=NFs9FwbQTac</a> .</p>
     
 	<h1>Preparing your system</h1>
 	<p>Before creating mobile apps for the first time, you need to prepare your system for this task. You only need to follow this stes once: install the latest version of Node.js — to do this, go to <a href="https://nodejs.org/" target="_blank">nodejs.org</a> and follow the recommended installation procedure for your operating system.</p>
