--- a/server/export/mobile/readme.html
+++ b/server/export/mobile/readme.html
@@ -29,6 +29,7 @@
 <body>
     <h1>TilBuci mobile app project</h1>
     <p>This is your <a href="https://capacitorjs.com/" target="_blank">Capacitor</a> project. It can be used to create Android and iOS/iPadOS apps. The "[APPID]" folder contains the entire project that should be used for its generation. If you have already generated apps from your movie using Capacitor, just copy the new files, overriding the previous ones. Avoid saving your Capacitor project on a folder with spaces of special characters on path/name.</p>
+    <p>You can check out a video tutorial with this procedure at <a href="https://www.youtube.com/watch?v=Hsz4B4uhMvo" target="_blank">https://www.youtube.com/watch?v=Hsz4B4uhMvo</a> .</p>
     
 	<h1>Preparing your system</h1>
 	<p>Before creating mobile apps for the first time, you need to prepare your system for this task. You only need to follow these steps once. First, install the latest version of Node.js — to do this, go to <a href="https://nodejs.org/" target="_blank">nodejs.org</a> and follow the recommended installation procedure for your operating system (supported systems are Windows, Linux, and macOS).</p>
