--- a/server/export/pwa/index.html
+++ b/server/export/pwa/index.html
@@ -19,6 +19,7 @@
 	<meta property="og:description" content="[SITEABOUT]" />
 	[SITEPLUGINHEAD]
 	<script type="text/javascript" src="./TilBuci.js"></script>
+    <script type="text/javascript" src="./externs.js"></script>
 	<script>
 		window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, { capture: false, passive: false });
 		if (typeof window.devicePixelRatio != 'undefined' && window.devicePixelRatio > 2) {
