--- a/server/export/site/index.html
+++ b/server/export/site/index.html
@@ -18,6 +18,7 @@
 	<meta property="og:description" content="[SITEABOUT]" />
 	[SITEPLUGINHEAD]
 	<script type="text/javascript" src="./TilBuci.js?rd=[RAND]"></script>
+	<script type="text/javascript" src="./externs.js?rd=[RAND]"></script>
 	<script>
 		window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, { capture: false, passive: false });
 		if (typeof window.devicePixelRatio != 'undefined' && window.devicePixelRatio > 2) {
